--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,6 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# env
+.env
+.env.local
+.env.production
+.env.development
+
 node_modules
 dist
 dist-ssr
