--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "ethers": "^6.16.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-qr-reader": "^3.0.0-beta-1",
